--- a/static/css/site.css
+++ b/static/css/site.css
@@ -12,8 +12,7 @@ body {
 
 .App {
     color: white;
-    min-width: 350px;
-    width: 50%;
+    width: 100%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -64,7 +63,7 @@ body {
 
 .my-navbar {
     color: white;
-    font-size: larger;
+    font-size: x-large;
     padding-top: 5px;
     margin-left: 5px;
     margin-right: 5px;
@@ -82,17 +81,18 @@ body {
 .my-navbar li:not(:first-child) {
     margin-left: 10px;
 }
+.my-navbar li:hover {
+    color: blue;
+}
 
 .main-title {
     text-align: center;
-    color: white;
-    border-bottom: 1px solid blue;
-    border-top: 1px solid blue;
-    width: 50%;
+    border-bottom: 2px solid blue;
+    border-top: 2px solid blue;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
-    min-width: 300px;
-    max-width: 300px;
+    font-size: 4em;
 }
 
 
@@ -101,8 +101,8 @@ body {
     color: white;
     height: 50px;
     min-width: 200px;
-    width: 50%;
-    max-width: 250px;
+    width: 100%;
+    max-width: 500px;
     border: 3px solid rgb(238, 178, 38);
     border-radius: 25px;
     box-shadow: inset 0px 0px 7px 1px black;
@@ -129,10 +129,11 @@ body {
     border: 2px solid rgb(238, 178, 38);
     color: white;
     box-shadow: inset 0px 0px 7px 1px black;
-    width: 20%;
-    max-width: 100px;
-    min-width: 80px;
-    height: 35px;
+    width: 100%;
+    min-width: 100px;
+    max-width: 200px;
+   
+    height: 40px;
     font-size: medium;
     border-radius:  25px;
     cursor: pointer;
@@ -152,6 +153,10 @@ body {
     font-size: large;
     font-weight: bolder;
     cursor: pointer;
+    height: 40px;
+    width: 100%;
+    min-width: 100px;
+    max-width: 200px;
 }
 .link-btn:focus{
     border: none;
@@ -163,8 +168,8 @@ body {
 
 .player-input {
     border: none;
-    width: 50%;
-    min-width: 200px;
+    width: 90%;
+    max-width: 350px;
     height: 50px;
     border-radius: 25px 0px 0px 25px;
     padding-left: 30px;
@@ -181,7 +186,8 @@ body {
 
 .add-player-btn {
     border: none;
-    min-width: 50px;
+    width: 10%;
+    max-width: 80px;
     height: 50px;
     border-radius: 0px 25px 25px 0px;
     font-size: larger;
@@ -203,6 +209,7 @@ body {
 }
 
 .player-list {
+    padding: 0;
     list-style-type: none;
     color: rgb(221, 205, 205);
     font-size: x-large;
@@ -212,13 +219,15 @@ body {
     padding-bottom: 15px;
     box-shadow: inset 0px 0px 15px 5px black;
     min-height: 100px;
+    width: 100%;
+    max-width: 440px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .player-list li {
     border-bottom: 1px dashed white;
-    width: 99%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
 }
 
 .player-name {
@@ -226,6 +235,7 @@ body {
     white-space: nowrap;
     overflow: hidden;
 }
+
 
 /* width */
 ::-webkit-scrollbar {
@@ -250,30 +260,34 @@ body {
   }
 
 .game-simulator{
-      width: 300px;
+      width: 400px;
     margin-left: auto;
     margin-right: auto;
   }
 
 .game-simulator canvas {
     border: 1px solid black !important;
+    transition: steps(5, 'start');
 }
 
 .action-message {
     position: absolute;
     top: 30px;
     left: 25%;
-    /* max-width: 200px;
-    min-width: 100px; */
     width: 50%;
-    min-height: 400px;
+    min-width: 350px;
+    min-height: 80%;
     height: auto;
     background-color: rgb(235, 198, 36);
     z-index: 1;
     border-radius: 10px;
     border: 2px solid black;
-    padding-top: 10px;
-    font-size: x-large;
+    padding-top: auto;
+    padding-bottom: auto;
+    font-size: xx-large;
+    font-weight: bolder;
+    animation: ease-in;
+    -webkit-animation: cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
 
 .gif-image {
@@ -310,13 +324,15 @@ body {
     background-color: rgb(65, 157, 218);
     color: white;
     box-shadow: inset 0px 0px 15px 0px black;
-    width: 40%;
+    width: 100%;
     min-width: 300px;
+    max-width: 400px;
     min-height: 100px;
     max-height: 300px;
     overflow-y: scroll;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
     padding-top: 25px;
     padding-bottom: 25px;
     text-align: left;
@@ -325,14 +341,15 @@ body {
 
 .image-dropdown {
     padding: 0;
+    margin: 0;
     position: relative;
     z-index: 1;
     background-color: white;
     list-style-type: none;
     height: auto;
-    max-height: 300px;
+    min-height: 50px;
     width: 100%;
-    min-width: 50px;
+    min-width: 80px;
     text-align: center;
     overflow-x: scroll; 
     /* border: 2px solid purple; */
@@ -349,3 +366,41 @@ body {
     background-color: rgb(73, 85, 248);
     color: white;
 }
+
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 10px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown-content {
+      color: black;
+      font-size: small;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+
